@@ -1,3 +1,4 @@
+Reset wave sensor positions so that they come out in the right relative location after resetting previous instance
 Made it possible to drop in sensors by dropping in their probes
 # 0.00.37 (50514) Apr 11, 2011
 Require a sensor body (not probe) to be put in toolbox to return the sensor
